--- a/front-end/page3.html
+++ b/front-end/page3.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA Compatible" content="ie=edge">
+    <meta name="author" content="FitU team dev">
+    <meta name="keywords" content="FitU "> 
+    <title>Fitu post</title>
 </head>
 <body>
-    <!-- this is page 3  -->
-    <h1>hello</h1>
+   <h1>home</h1>
+   <h1>chat</h1>
+   <h1>work out</h1>
+   <h1>activity</h1>
+   <h1>game</h1>
+   <br>
+   <br>
+   <img src="https://img.freepik.com/free-photo/handsome-bearded-guy-posing-against-white-wall_273609-20597.jpg?size=626&ext=jpg&ga=GA1.1.1700460183.1709683200&semt=sph" alt="user profile">
+   <p>description</p>
+   <h3>user name </h3>
+   <h5>you like </h5>
+   <h5>notifications</h5>
+   <br>
+   <p> what do you want to search for?</p>
+   <br>
+   <p>what are you doing now?</p>
+   
+
+
+
 </body>
 </html>
