--- a/front-end/page4.html
+++ b/front-end/page4.html
@@ -8,12 +8,11 @@
     <title>FitU Chat</title>
 </head>
 <body>
-    <h1>home</h1>
-    <a href="page3.html"></a>
+    <h1><a href="page3.html">home</a></h1>
     <h1>chat</h1>
-    <h1>work out</h1>
-    <a href=""></a>
-    <h1>activity</h1>
-    <h1>game</h1>
+    <h1><a href="page5.html">work out</a></h1>
+    <h1><a href="page6.html">activity</a></h1>
+    <h1><a href="page7.html">game</a></h1>
+    <h2>for chat</h2>
 </body>
 </html>
