--- a/front-end/page5.html
+++ b/front-end/page5.html
@@ -8,14 +8,12 @@
     <title>FitU Chat</title>
 </head>
 <body>
-    <h1>home</h1>
-    <a href="page3.html"></a>
-    <h1>chat</h1>
-    <a href="page4.html"></a>
+    <h1><a href="page3.html">home</a></h1>
+    <h1><a href="page4.html">chat</a></h1>
     <h1>work out</h1>
-    <h1>activity</h1>
-    <a href=""></a>
-    <h1>game</h1>
-    <a href=""></a>
+    <h1><a href="page6.html">activity</a></h1>
+    <h1><a href="page7.html">game</a></h1>
+    <h2>find friends to work out</h2>
+</body>
 </body>
 </html>
