--- a/front-end/page6.html
+++ b/front-end/page6.html
@@ -9,26 +9,12 @@
     <title>Fitu post</title>
 </head>
 <body>
-   <h1>home</h1>
+    <h1><a href="page3.html">home</a></h1>
    <h1><a href="page4.html">chat</a></h1>
    <h1><a href="page5.html">work out</a></h1>
-   <h1><a href="page6.html">activity</a></h1>
+   <h1>activity</h1>
    <h1><a href="page7.html">game</a></h1>
-   
-   <br>
-   <br>
-   <img src="https://img.freepik.com/free-photo/handsome-bearded-guy-posing-against-white-wall_273609-20597.jpg?size=626&ext=jpg&ga=GA1.1.1700460183.1709683200&semt=sph" alt="user profile">
-   <p>description</p>
-   <h3>user name </h3>
-   <h5>you like </h5>
-   <h5>notifications</h5>
-   <br>
-   <p> what do you want to search for?</p>
-   <br>
-   <p>what are you doing now?</p>
-
-
-
+   <h2>find act</h2>
 
 </body>
 </html>
