--- a/front-end/page3.html
+++ b/front-end/page3.html
@@ -9,12 +9,13 @@
     <title>Fitu post</title>
 </head>
 <body>
+    <header>
    <h1>home</h1>
    <h1><a href="page4.html">chat</a></h1>
    <h1><a href="page5.html">work out</a></h1>
    <h1><a href="page6.html">activity</a></h1>
    <h1><a href="page7.html">game</a></h1>
-   
+   </header>
    <br>
    <br>
    <img src="https://img.freepik.com/free-photo/handsome-bearded-guy-posing-against-white-wall_273609-20597.jpg?size=626&ext=jpg&ga=GA1.1.1700460183.1709683200&semt=sph" alt="user profile">
